clusters/my-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-cd
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: docker.io/dhairya442/docker_exe:master-436d779-1713358673 # {"$imagepolicy": "test-cd:myapp"}
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8000
