clusters/my-cluster/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: test-cd 
  name: mysql
spec:
  selector:
    matchLabels:
      app: myapp-db
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-db
    spec:
      containers:
      - name: mysql 
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: myapp-db
        args: ["--default-authentication-plugin=mysql_native_password"]   
        volumeMounts:
          - mountPath: "/var/lib/mysql/"
            name: db-vol
            
      volumes:
        - name: db-vol
          
          persistentVolumeClaim: 
            claimName: "my-pvc"
