clusters/my-cluster/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-cd 
  name: db
  labels:
    app: myapp-db
spec:
  selector:
    app: myapp-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
